Fri Mar  4 2005  Joe Allen <jhallen@world.std.com>

	Add block evaluator and ? operator to math
	(now it can loop via. recursion :-)

	Add #if #else #endif matching.

	Get ^G working for VHDL (VHDL sucks).

	Disable ^K E and ^K ' in prompt windows.

	open ^] now autoindents (again).

	Fix jpico lock-up problem (lmargin option was
	not checking for invalid value of 0).

	Accept buffer overflow patch.

	-square is not a local option.

Thu Mar  3 2005  Joe Allen <jhallen@world.std.com>

	New help screen for math.
	Add statistics functions.

Wed Mar  2 2005  Joe Allen <jhallen@world.std.com>

	Fix pointer leak.
	Make option to enable mouse support
	Change .joe_state file to use \ for escape
	Improve math
	Ignore <a/> in Ctrl-G

Wed Mar  2 2005  Joe Allen <jhallen@world.std.com>

	Fix warnings from various syntax files (can't
	believe I didn't notice this...)

	Add -menu_jump option

Tue Mar  1 2005  Joe Allen <jhallen@world.std.com>

	Allow :s in xml names.
	Fix 'keymap' command.
	Add 'name' command.

Mon Feb 28 2005  Joe Allen <jhallen@world.std.com>

	User defined text delimiters
	XML delimiter matching

Sun Feb 27 2005  Joe Allen <jhallen@world.std.com>

	Fix lockup problem from Ctrl-G
	Fix bugs with new 'if' command.

Sun Feb 27 2005  Joe Allen <jhallen@world.std.com>

	Added Jesse McGrew's xterm mouse and macro enhancements:
		added to math: %, ==, !=, >, >=, <, <= operators,
		plus 'char' is ascii value of character under cursor.

		added functions: if, then, elsif, endif

	Needs work:
		'if' crashes.
		xterm selections don't paste into other windows.

Sat Feb 26 2005  Joe Allen <jhallen@world.std.com>

	Tab complete for ^K ; (tags search).

Sat Feb 26 2005  Joe Allen <jhallen@world.std.com>

	Allow '-' in file names in compiler error parser.

Sat Feb 26 2005  Joe Allen <jhallen@world.std.com>

	Accept patch from Kalan (thearinkalen at users.sourceforge.net)
	which makes save block prompt if a file is to be overwritten.
